--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,8 +13,52 @@ padding:10px;
 */
 
 * {
-margin:0px;
-font-family: Source Sans Pro', sans-serif;
+margin: 0px;
+font-family: Source Sans Pro, sans-serif;
+color: #0000008c;
 }
 
 /* Topo */
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #00cad1;
+    width: 100%;
+    height: 100px;
+}
+
+.secao-um-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 1024px;
+    height: 100px;
+}
+
+.links-topo {
+    display: flex;
+}
+
+.links-topo a {
+    margin-left: 15px;
+    padding: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+
+/* Primeira seção */
+
+.banner {
+    background-image: url('/assets/recepcao.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 500px;
+}
+
