--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,8 +14,9 @@ padding:10px;
 
 * {
 margin: 0px;
-font-family: Source Sans Pro, sans-serif;
+font-family: 'Source Sans Pro', sans-serif;
 color: #0000008c;
+box-sizing: border-box;
 }
 
 /* Topo */
@@ -60,5 +61,13 @@ header {
     background-repeat: no-repeat;
     width: 100%;
     height: 500px;
+    display: flex;
 }
 
+.titulo-banner {
+    font-size: 45px;
+    font-weight: 400;
+    width: 500px;
+    color: #ffffff;
+    background-color: #ffffff;
+}
