--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,28 +27,39 @@ header {
     align-items: center;
     background-color: #00cad1;
     width: 100%;
-    height: 100px;
+    height: 80px;
 }
 
 .secao-um-header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
     width: 1024px;
-    height: 100px;
+    height: 80px;
 }
 
 .links-topo {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
 }
 
 .links-topo a {
-    margin-left: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
     padding: 10px;
     text-decoration: none;
     color: #ffffff;
     font-weight: bold;
+}
+
+.logo-topo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
 }
 
 
@@ -62,12 +73,24 @@ header {
     width: 100%;
     height: 500px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .titulo-banner {
+    display: flex;
+    align-items: center;
+    width: 1024px;
+    height: 200px;
+}
+
+.titulo {
+    display: flex;
+    justify-content: center;
+}
+
+.titulo-banner h1 {
     font-size: 45px;
     font-weight: 400;
-    width: 500px;
     color: #ffffff;
-    background-color: #ffffff;
 }
