--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,6 +36,7 @@ header {
     justify-content: space-between;
     width: 1024px;
     height: 80px;
+    background-color: crimson;
 }
 
 .links-topo {
@@ -82,6 +83,7 @@ header {
     align-items: center;
     width: 1024px;
     height: 200px;
+    background-color: #00cad1;
 }
 
 .titulo {
@@ -94,3 +96,58 @@ header {
     font-weight: 400;
     color: #ffffff;
 }
+
+/* Segunda seção sobre*/
+
+.segunda-secao-sobre {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: blueviolet;
+}
+
+.sobre {
+    text-align: center;
+    width: 1024px;
+    padding: 0px;
+    background-color: #00cad1;
+}
+
+.sobre h2 {
+    font-size: 30px;
+    padding: 20px 0px 10px 0px;
+}
+
+.sobre p {
+    padding: 0px 20px 20px 20px;
+}
+
+.img-e-lista {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1024px;
+    background-color: coral;
+}
+
+.img-e-lista img {
+    display: flex;
+    justify-content: center;
+}
+
+.img-e-lista h3 {
+    padding: 20px 0px;
+    font-weight: 400;
+    text-align: center;
+    font-size: 20px;
+    background-color: darkgreen;
+}
+
+.img-e-lista li {
+    padding: 2px;
+    background-color: darkred;
+}
+
+/* Terceira seção especialidades */
