--- a/css/estilo-especilaidades.css
+++ b/css/estilo-especilaidades.css
@@ -54,3 +54,52 @@ header {
     height: 80px;
 }
 
+/* Primeira seção (navegação) */
+
+.secao-um-navegacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 50px;
+    background-color: darkgreen;
+}
+
+.links-secao-navegacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1024px;
+    height: 50px;
+    background-color: darkgray;
+}
+
+.links-secao-navegacao a {
+    margin: 5px;
+    padding: 5px;
+    text-decoration: none;
+    font-weight: 600;
+    border-bottom: 3px solid #00cad1;
+    height: 28px;
+}
+
+/* Conheça nossas especialidades */
+
+.conheca-especialidades {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    background-color: #00cad1;
+}
+
+.titulo-secao-especialidades {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1024px;
+    height: 50px;
+    background-color: blueviolet;
+}
