--- a/css/estilo-especilaidades.css
+++ b/css/estilo-especilaidades.css
@@ -62,7 +62,7 @@ header {
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 50px;
+    height: 60px;
     background-color: darkgreen;
 }
 
@@ -71,7 +71,7 @@ header {
     justify-content: center;
     align-items: center;
     width: 1024px;
-    height: 50px;
+    height: 60px;
     background-color: darkgray;
 }
 
@@ -84,5 +84,46 @@ header {
     height: 28px;
 }
 
-/* Conheça nossas especialidades */
+/* titulo seção especialidades */
+
+.titulo-secao-especialidades {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    background-color: #00cad1;
+}
+
+.titulo-secao-especialidades h1 {
+    font-size: 24px;
+    font-weight: 700;
+    width: 1024px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: coral;
+}
+
+/* Seção Ortopedia */
+
+.conteudo-da-pagina {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.conheca-especialidades {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 1024px;
+    background-color: #00cad1;
+}
 
