--- a/css/estilo-especilaidades.css
+++ b/css/estilo-especilaidades.css
@@ -108,7 +108,7 @@ header {
     background-color: coral;
 }
 
-/* Seção Ortopedia */
+/* main */
 
 .conteudo-da-pagina {
     display: flex;
@@ -119,7 +119,9 @@ header {
     background-color: lightgray;
 }
 
-.conheca-especialidades {
+/* Seção Ortopedia */
+
+.secao-ortopedia {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,7 +130,7 @@ header {
     background-color: darkolivegreen;
 }
 
-.descricao-secao-especialidades {
+.descricao-secao-ortopedia {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,7 +140,7 @@ header {
     background-color: darkorange;
 }
 
-.descricao-secao-especialidades h2 {
+.descricao-secao-ortopedia h2 {
     font-size: 22px;
     font-weight: 700;
     width: 512px;
@@ -150,7 +152,7 @@ header {
     background-color: cornflowerblue;
 }
 
-.descricao-secao-especialidades p {
+.descricao-secao-ortopedia p {
     font-size: 16px;
     font-weight: 400;
     width: 512px;
@@ -161,3 +163,6 @@ header {
     text-align: center;
     background-color: darkgray;
 }
+
+
+
