--- a/css/estilo-especilaidades.css
+++ b/css/estilo-especilaidades.css
@@ -119,9 +119,24 @@ header {
     background-color: lightgray;
 }
 
-/* Seção Ortopedia */
+.conteudo-da-pagina img {
+    width: 330px;
+    height: 220px;
+}
 
-.secao-ortopedia {
+.secao-geriatria img {
+    width: 330px;
+    height: 280px;
+}
+
+.secao-fisioterapia img {
+    width: 330px;
+    height: 340px;
+}
+
+/* Seções */
+
+.secao-ortopedia, .secao-pediatria, .secao-geriatria, .secao-psicologia, .secao-fisioterapia {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -130,7 +145,7 @@ header {
     background-color: darkolivegreen;
 }
 
-.descricao-secao-ortopedia {
+.ortopedia, .pediatria, .geriatria, .psicologia, .fisioterapia {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,11 +155,12 @@ header {
     background-color: darkorange;
 }
 
-.descricao-secao-ortopedia h2 {
+.ortopedia h2, .pediatria h2, .geriatria h2, .psicologia h2, .fisioterapia h2 {
     font-size: 22px;
     font-weight: 700;
     width: 512px;
     height: 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -152,11 +168,11 @@ header {
     background-color: cornflowerblue;
 }
 
-.descricao-secao-ortopedia p {
+.ortopedia p, .pediatria p, .geriatria p, .psicologia p, .fisioterapia p {
     font-size: 16px;
     font-weight: 400;
     width: 512px;
-    height: 80px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -165,4 +181,61 @@ header {
 }
 
 
+/* Estilo tabela */
 
+table {
+    width: 694px;
+    border-collapse: collapse;
+    text-align: left;
+}
+
+thead th {
+    background-color: #00cad1;
+    color: #ffffff;
+    font-weight: 700;
+    height: 40px;
+    padding-left: 20px;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: rgb(210, 210, 210);
+    color: #0000008c;
+    font-weight: 600;
+    height: 60px;
+}
+
+tbody tr:nth-child(even) {
+    background-color: rgb(250, 250, 250);
+    color: #0000008c;
+    font-weight: 600;
+    height: 60px;
+}
+
+tbody td {
+    padding-left: 20px;
+}
+
+/* Footer */
+
+.rodape {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #00cad1;
+    width: 100%;
+    height: 250px;
+}
+
+.conteudo-rodape {
+    text-align: center;
+    width: 1024px;
+    height: 250px;
+    color: #ffffff;
+    background-color: darkgrey;
+}
+
+.paragrafo-rodape {
+    padding: 5px 20px 20px 20px;
+    width: 1024px;
+    background-color: darkkhaki;
+}
