--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,8 @@ header {
     align-items: center;
     background-color: #00cad1;
     width: 100%;
-    height: 80px;
+    height: 60px;
+    position: fixed;
 }
 
 .secao-um-header {
@@ -23,14 +24,14 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 1024px;
-    height: 80px;
+    height: 60px;
 }
 
 .links-topo {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
+    height: 60px;
 }
 
 .links-topo a {
@@ -47,7 +48,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80px;
+    height: 60px;
+}
+
+.logo {
+    width: 150px;
 }
 
 
@@ -59,7 +64,7 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: 300px;
+    height: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,7 +111,7 @@ header {
     width: 1024px;
 }
 
-.paragrafo-secao-sobre, .paragrafo-secao-especialidades, .paragrafo-secao-contato, .paragrafo-rodape {
+.paragrafo-secao-sobre, .paragrafo-secao-especialidades, .paragrafo-secao-contato {
     padding: 5px 20px 40px 20px;
     width: 1024px;
 }
@@ -215,7 +220,7 @@ iframe {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #00cad1;
+    background-color: #0C6E71;
     width: 100%;
     height: 300px;
 }
@@ -223,5 +228,10 @@ iframe {
 .conteudo-rodape {
     text-align: center;
     width: 1024px;
+    color: #ffffff;
+}
+
+.paragrafo-rodape {
+    padding: 15px 0px;
     color: #ffffff;
 }
